# devLLM

./: .gitignore  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  LICENSE  MODEL_CARD.md  README.md  SPEC.md  pyproject.toml
architecture/: README.md  apple_silicon_strategy.md  attention_flow.md  future_architecture.md  inference_pipeline.md  memory_layout.md  model_architecture.md  tokenizer_architecture.md  training_pipeline.md
assets/: README.md
benchmarks/: 001_baseline.md  002_kv_cache.md  003_grad_accum.md  README.md
checkpoints/: README.md
configs/: README.md  mnist.yaml  model_v0_1_char_100k.yaml  train_shakespeare.yaml
datasets/: README.md  SOURCES.md
diagrams/: README.md
docs/: 00_PROJECT_VISION.md  01_ROADMAP.md  02_ARCHITECTURE.md  03_LEARNING_PATH.md  04_MATHEMATICS.md  05_NEURAL_NETWORKS.md  06_TOKENIZER.md  07_EMBEDDINGS.md  08_ATTENTION.md  09_TRANSFORMER.md  10_GPT_ARCHITECTURE.md  11_TRAINING_PIPELINE.md  12_INFERENCE.md  13_OPTIMIZATION_FOR_APPLE_SILICON.md  14_BENCHMARKING.md  15_EXPERIMENT_GUIDE.md  16_MODEL_CONFIGURATION.md  17_DATASET_GUIDE.md  18_RESEARCH_PAPERS.md  19_GLOSSARY.md  20_TODO.md  21_DEVLOG.md  22_FUTURE_VERSIONS.md  23_RESOURCES.md  CURRICULUM.md  README.md
examples/: xor.py
experiments/: README.md
notes/: README.md
outputs/: README.md  trained_shakespeare_sample.txt  untrained_baseline.txt
research/: ARCHITECTURE_REVIEW.md  OPTIMIZATION_BACKLOG.md  README.md  tiny_gpt_landscape.md
scripts/: README.md  benchmark.py  generate.py  generate_baseline.py  prepare_data.py  train.py  train_mnist.py  (+1 more)
src/: README.md
(+57 files in other folders)
